ideas/open issues
----------------------------

LATEST
-----------------------------
- added GeoJsonReader (#37)
- added GeoJsonWriter (#37)
- added JsonWriter (#36)
- added JsonReader (#36)
- fixed GeoPackageReader NULL geom
- jackson-core-2.9.7
- iox-ili-1.21.6
- ehibasics-1.4.1
- ili2-5.2.2
- ili2pg-4.5.0
- ili2gpkg-4.5.0

iox-wkf 1.0.2 (2021-05-06)
-----------------------------
- ShpWriter: shortcut attribute names
- add gpkg2db
- add db2gpkg
- add GpkgReader
- add GpkgWriter
- ili2db-4.4.1

iox-wkf 1.0.1 (2019-06-05)
-----------------------------
- Import2db: support additional columns (not present in source file) in target table

iox-wkf 0.9.0 (2017-??-??)
-----------------------------
- add shp2db
- add csv2db
- add shapefileReader
- add shapefileWriter
- ShpReader/ShpWriter: added dbf encoding support
- add setting to customize date/time/timestamp format